significant revamp of A.1

--- a/main.bib
+++ b/main.bib
@@ -50,6 +50,24 @@ MRREVIEWER = {E. Dyer},
 MRREVIEWER = {Stewart B. Priddy},
 }
 
+@article {AdamsPriddy,
+    AUTHOR = {Adams, J. F. and Priddy, S. B.},
+     TITLE = {Uniqueness of {$B{\rm SO}$}},
+   JOURNAL = {Math. Proc. Cambridge Philos. Soc.},
+  FJOURNAL = {Mathematical Proceedings of the Cambridge Philosophical
+              Society},
+    VOLUME = {80},
+      YEAR = {1976},
+    NUMBER = {3},
+     PAGES = {475--509},
+      ISSN = {0305-0041},
+   MRCLASS = {55D35},
+  MRNUMBER = {0431152},
+MRREVIEWER = {V. P. Snaith},
+       DOI = {10.1017/S0305004100053111},
+       URL = {http://dx.doi.org/10.1017/S0305004100053111},
+}
+
 @article {Amitsur,
     AUTHOR = {Amitsur, S. A.},
      TITLE = {Simple algebras and cohomology groups of arbitrary fields},
@@ -175,6 +193,24 @@ MRREVIEWER = {Mark Hovey},
    MRCLASS = {57D90 (55B15 14L05)},
   MRNUMBER = {0375354},
 MRREVIEWER = {A. Dold},
+}
+
+@article {BCGHRW,
+    AUTHOR = {Baker, A. and Carlisle, D. and Gray, B. and Hilditch, S. and
+              Ray, N. and Wood, R.},
+     TITLE = {On the iterated complex transfer},
+   JOURNAL = {Math. Z.},
+  FJOURNAL = {Mathematische Zeitschrift},
+    VOLUME = {199},
+      YEAR = {1988},
+    NUMBER = {2},
+     PAGES = {191--207},
+      ISSN = {0025-5874},
+   MRCLASS = {55Q10 (55R12)},
+  MRNUMBER = {958648},
+MRREVIEWER = {Frederick Cohen},
+       DOI = {10.1007/BF01159652},
+       URL = {http://dx.doi.org/10.1007/BF01159652},
 }
 
 @article {Balmer,
@@ -957,6 +993,22 @@ MRREVIEWER = {Yves F{\'e}lix},
        URL = {http://dx.doi.org/10.1090/conm/158/01455},
 }
 
+@article {Kuhn,
+    AUTHOR = {Kuhn, Nicholas J.},
+     TITLE = {A guide to telescopic functors},
+   JOURNAL = {Homology Homotopy Appl.},
+  FJOURNAL = {Homology, Homotopy and Applications},
+    VOLUME = {10},
+      YEAR = {2008},
+    NUMBER = {3},
+     PAGES = {291--319},
+      ISSN = {1532-0073},
+   MRCLASS = {55Q51 (55N20 55P60 55P65)},
+  MRNUMBER = {2475626},
+MRREVIEWER = {Keith Peter Johnson},
+       URL = {http://projecteuclid.org/euclid.hha/1251832476},
+}
+
 @article {LandweberHomologicalComodules,
     AUTHOR = {Landweber, Peter S.},
      TITLE = {Homological properties of comodules over {$M{\rm U}\sb\ast
@@ -1648,6 +1700,24 @@ MRREVIEWER = {David C. Johnson},
   note = {\url{http://www.math.uiuc.edu/~rezk/felix-klein-lectures-notes.pdf}, Accessed: 2016-10-07}
 }
 
+@article {RezkLogarithm,
+    AUTHOR = {Rezk, Charles},
+     TITLE = {The units of a ring spectrum and a logarithmic cohomology
+              operation},
+   JOURNAL = {J. Amer. Math. Soc.},
+  FJOURNAL = {Journal of the American Mathematical Society},
+    VOLUME = {19},
+      YEAR = {2006},
+    NUMBER = {4},
+     PAGES = {969--1014},
+      ISSN = {0894-0347},
+   MRCLASS = {55N22 (55P43 55S05)},
+  MRNUMBER = {2219307},
+MRREVIEWER = {Keith Peter Johnson},
+       DOI = {10.1090/S0894-0347-06-00521-2},
+       URL = {http://dx.doi.org/10.1090/S0894-0347-06-00521-2},
+}
+
 @ARTICLE{RezkNotesOnHMThm,
   author = {Rezk, Charles},
   title = {Notes on the {H}opkins--{M}iller Theorem},
@@ -1783,6 +1853,15 @@ MRREVIEWER = {Jin Kun Lin},
    MRCLASS = {55.50},
   MRNUMBER = {0232392},
 MRREVIEWER = {A. H. Clark},
+}
+
+@article{SprangNaumann,
+  author = {Sprang, Johannes and Naumann, Niko},
+  title = {$p$--adic Interpolation and Multiplicative Orientations of $KO$ and $TMF$},
+  archivePrefix = "arXiv",
+  eprint = {1409.5314},
+  primaryClass = "math.AT",
+  year = {2014}
 }
 
 @misc{stacks-project,
