--- a/unknowns.tex
+++ b/unknowns.tex
@@ -321,7 +321,7 @@ The case of the orientation $M\String \to \tmf$ has all of the same trappings, b
 \end{enumerate}
 
 \begin{remark}
-The presence of such interesting arithmetic invariants (Bernoulli numbers, Bernoulli polynomials, generalized Eisenstein series, \ldots) hiding in the Miller invariant and its analogues is very striking.  One wonders what the analogous values are (or perhaps the values stemming from the iterated $S^1$--transfer of Baker et al~\cite{Barthel}) associated to a Morava $E_\Gamma$.
+The presence of such interesting arithmetic invariants (Bernoulli numbers, Bernoulli polynomials, generalized Eisenstein series, \ldots) hiding in the Miller invariant and its analogues is very striking.  One wonders what the analogous values are (or perhaps the values stemming from the iterated $S^1$--transfer of Baker et al~\cite{BCGHRW}) associated to a Morava $E_\Gamma$.
 \end{remark}
 
 \begin{remark}
