standardize notation for K(d)-localization

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -196,10 +196,10 @@ We would like to understand the behavior of $C$ on homotopy based on some data a
 
 We are now in a position to compute the action of $C$ on a homotopy class in $\pi_* b\spin$ by chasing through the following steps:
 \begin{enumerate}
-    \item We push such a class forward to $L_{K(1)} b\spin \simeq KO_p$ along the localization map.
-    \item We then pull it back to $L_{K(1)} Cj \simeq KO_p$ along $KO_p \xrightarrow{1 - \psi^c} KO_p$, which acts by multiplication by $(1 - c^k)$ on $\pi_{4k}$.
-    \item We push it down along $B'$ to $L_{K(1)} \gl_1 KO_p \simeq KO_p$, which acts by an unknown factor.
-    \item We include it into the rational component of $\Q \otimes L_{K(1)} gl_1 KO_p$, using the fact that $\pi_* L_{K(1)} \gl_1 KO_p$ is torsion--free.
+    \item We push such a class forward to $\widehat L_1 b\spin \simeq KO_p$ along the localization map.
+    \item We then pull it back to $\widehat L_1 Cj \simeq KO_p$ along $KO_p \xrightarrow{1 - \psi^c} KO_p$, which acts by multiplication by $(1 - c^k)$ on $\pi_{4k}$.
+    \item We push it down along $B'$ to $\widehat L_1 \gl_1 KO_p \simeq KO_p$, which acts by an unknown factor.
+    \item We include it into the rational component of $\Q \otimes \widehat L_1 gl_1 KO_p$, using the fact that $\pi_* \widehat L_1 \gl_1 KO_p$ is torsion--free.
     \item Finally, we pull it back to $\Q \otimes \gl_1 KO_p$ along the logarithm $\ell_1$, which acts by multiplication by $(1 - p^{k-1})$ using Rezk's $K(1)$--local formula.\footnote{The formula for the logarithm in nonzero degrees comes from thinking of the logarithm as a \emph{natural transformation} and applying it to the mapping set $\ell\co \gl_1 KO^0(S^{2n}) \to KO^0(S^{2n})$.}
 \end{enumerate}
 The effect of this sequence of steps is \[t_{4k} = (1 - c^k)^{-1} b_{4k} (1 - p^{k-1})^{-1},\] where $t_{4k}$ and $b_{4k}$ are the effects on $\pi_{4k}$ of the maps $C$ and $B'$ respectively.  In the course of this proof, we are using the fact that division in the ring $\Z_p$ is unique when it is possible---the more responsible-looking equation to write is \[b_{4k} = (1 - c^k) t_{4k} (1 - p^{k-1}).\]
@@ -207,10 +207,10 @@ The effect of this sequence of steps is \[t_{4k} = (1 - c^k)^{-1} b_{4k} (1 - p^
 \begin{sidewaysfigure}
 \centering
 \begin{tikzcd}[column sep=0.7em]
-& & & L_{K(1)} \S \arrow{rr} \arrow[equal]{d} & & KO_p \arrow[equal]{d} \arrow["1 - \psi^c"]{rr} & & KO_p \arrow[equal]{d} \\
-& & & L_{K(1)} \gl_1 \S \arrow{rr} & & L_{K(1)} Cj \arrow[densely dotted, "B'" near start]{dd} \arrow{rr} & & L_{K(1)} b\spin \\
+& & & \widehat L_1 \S \arrow{rr} \arrow[equal]{d} & & KO_p \arrow[equal]{d} \arrow["1 - \psi^c"]{rr} & & KO_p \arrow[equal]{d} \\
+& & & \widehat L_1 \gl_1 \S \arrow{rr} & & \widehat L_1 Cj \arrow[densely dotted, "B'" near start]{dd} \arrow{rr} & & \widehat L_1 b\spin \\
 \spin \arrow{rr}[description]{j} \arrow{rrdd} & & \gl_1 \S \arrow{rr} \arrow{dd} \arrow{ru} \arrow{rrdd}[description]{\gl_1 \eta_{KO_p}} & & Cj \arrow{ru} \arrow[densely dotted, "A"' near start]{dd}[description]{B} \arrow[crossing over]{rr} & & b\spin \arrow{ru} \arrow[crossing over]{rr} \arrow[bend left=20]{rrdd} & & b\gl_1 \S \arrow{dd} \\
-& & & & & L_{K(1)} \gl_1 KO_p \arrow{rr} & & \Q \otimes L_{K(1)} \gl_1 KO_p \\
+& & & & & \widehat L_1 \gl_1 KO_p \arrow{rr} & & \Q \otimes \widehat L_1 \gl_1 KO_p \\
 & & \Susp^{-1} \Q/\Z \otimes \gl_1 KO_p \arrow{rr} & & \gl_1 KO_p \arrow{ru} \arrow{rr} & & \Q \otimes \gl_1 KO_p \arrow{ru} \arrow{rr} \arrow[densely dotted, leftarrow, crossing over]{uu}[description]{C} & & \Q/\Z \otimes \gl_1 KO_p.
 \end{tikzcd}
 \caption{A diagram showing the interconnections among the main components of the $p$--primary part of the Ando--Hopkins--Rezk argument.}\label{MainAHRDiagram}
@@ -313,11 +313,11 @@ These Bernoulli sequences are \emph{not} the only sequences satisfying these rec
 The case of the orientation $M\String \to \tmf$ has all of the same trappings, but its order of complexity is $(-)^{3/2}$ of the above case, essentially because the height $1$ chromatic fracture \emph{square} gets replaced by the height $2$ chromatic fracture \emph{cube}.  (There is also the issue of the more complicated coefficient ring $\tmf_*$ over $KO_*$.)  Many of the steps remain the same:
 \begin{enumerate}
     \item Begin with a rational orientation, which is basically the Witten genus valued in holomorphic expansions of modular forms.
-    \item Analyze the homotopy type of $L_{K(1)} \tmf$ and compare it to that of $KO$.  This lets us use another universal coefficient theorem to lift our description of $KO^* KO$ as $KO^*$--valued measures to $L_{K(1)} \tmf^* KO$ as $L_{K(1)} \tmf^*$--valued measures.
-    \item The homotopy type of $L_{K(2)} \tmf$ is ``naively irrelevant'' in the chromatic fracture square: maps $b\Spin \to L_{K(2)} \tmf$ factor through $L_{K(2)} b\Spin = L_{K(2)} KO_p = 0$.
-    \item However, the logarithm's presence in the chromatic fracture square $L_{K(1)} \tmf \to L_{K(1)} L_{K(2)} \tmf$ has a real effect that must be understood.  This is not easy: the height $2$ logarithm is not so accessible, so this requires a real understanding of power operations in $\tmf$.
+    \item Analyze the homotopy type of $\widehat L_1 \tmf$ and compare it to that of $KO$.  This lets us use another universal coefficient theorem to lift our description of $KO^* KO$ as $KO^*$--valued measures to $\widehat L_1 \tmf^* KO$ as $\widehat L_1 \tmf^*$--valued measures.
+    \item The homotopy type of $\widehat L_2 \tmf$ is ``naively irrelevant'' in the chromatic fracture square: maps $b\Spin \to \widehat L_2 \tmf$ factor through $\widehat L_2 b\Spin = \widehat L_2 KO_p = 0$.
+    \item However, the logarithm's presence in the chromatic fracture square $\widehat L_1 \tmf \to \widehat L_1 \widehat L_2 \tmf$ has a real effect that must be understood.  This is not easy: the height $2$ logarithm is not so accessible, so this requires a real understanding of power operations in $\tmf$.
     \item You also have to calculate the Miller invariant associated to $\tmf$.  In the case of $E_\infty(M\Spin, KO)$, one uses the $A_\infty$ orientation $MU \to KU$, as well as an understanding of the maps $\pi_* BU \to \pi_* BO$ and $\pi_* KO \to \pi_* KU$.  The case of $E_\infty(M\String, \tmf)$ is similar: one constructs an $A_\infty$ lift of the $\sigma$--orientation $MU[6, \infty) \to K^{\Tate}$, as well as an understanding of the maps $\pi_* BU[6, \infty) \to \pi_* B\String$ and $\pi_* \tmf \to \pi_* K^{\Tate}$.
-    \item Finally, you have to ramp up the algebraic part of the calculation by identifying the analogues of the Mazur moments in $\pi_* L_{K(1)} \tmf$.  These turn out to be normalized Eisenstein series.
+    \item Finally, you have to ramp up the algebraic part of the calculation by identifying the analogues of the Mazur moments in $\pi_* \widehat L_1 \tmf$.  These turn out to be normalized Eisenstein series.
 \end{enumerate}
 
 \begin{remark}
