some housekeeping in Ch 6

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -415,6 +415,7 @@ Now, apply the genuine $G$-equivariant Chern character to the $K_G$ factor to ge
 \todo{pp.\ 42-43 of FPFP has some easy-to-state results about this collected.}
 \todo{Kohlhaase~\cite{Kohlhaase} references Yu~\cite{Yu} for having closed formulas generalizing the Hopkins--Gross example section.}
 \todo{Section 2.3 (pg.\ 35--36) of Morava's \textit{Noetherian Localisations} gives a sketch of the period map (in terms of curves, I guess).}
+\todo{Mention that the period map is equivariant for the isotropy action.}
 
 Describe Dieudonn\'e crystals and the Tapis de Cartier.
 
@@ -684,6 +685,19 @@ Let $F_d$ denote the discrepancy spectrum for $E_d$.  There is a natural equival
 
 
 free $E_\infty$--orientations off of $MU$
+
+
+
+
+
+Comparison of comodules $M$ for the isogenies pile with the action of $M_n(\Z_p)$ on $M \otimes_{E_n^*} D_\infty$ (this is a modern result due to Tomer, Tobi, Lukas, and Nat).  This is basically Nat's rational claim: start with a sheaf on the isogenies pile.  Tensor everything with $\Q$.  That turns this thing into a rational algebra under the Drinfel'd ring together with an equivariant action of $\GL_n \Q_p$.
+
+
+
+
+
+\todo[inline]{Leave a remark in here about this: McClure in BMMS works along similar lines to show that the Quillen idempotent is not $H_\infty$, but he doesn't get any positive results (and, in particular, he can't complete his analysis as we do because he doesn't have access to the $BP$--homology of finite groups and to HKR character theory).  One wonders whether the stuff here does say something about $BP$ as the height tends toward $\infty$.  So far as I know, no one has written much about this.  Surely it remains a bee in Matt's bonnet.}
+
 
 
 
