some notes from rereading FPFP

--- a/mo.tex
+++ b/mo.tex
@@ -320,6 +320,7 @@ We left off in the previous Lecture with an ominous finiteness condition in \Cre
 In this Lecture, we will fix all these deficiencies of $X_{H\F_2}$ except for \#\ref{SkewCommutativeDeficiency}, which does not matter with mod--$2$ coefficients but which will be something of a bugbear throughout the rest of the book.
 
 We will begin by considering the grading on $H\F_2^* X$, where $X$ is a finite complex.  In algebraic geometry, the following standard construction is used to track gradings:
+\todo{Mention FPFP's Polarised Schemes (Sections 11 and 14) in a footnote.}
 
 \begin{definition}[{\cite[Definition 2.95]{StricklandFSFG}}]
 A \textit{$\Z$--grading} on a ring $R$ is a system of additive subgroups $R_k$ of $R$ satisfying $R = \bigoplus_k R_k$, $1 \in R_0$, and $R_j R_k \subseteq R_{j+k}$.  Additionally, a map $f\co R \to S$ of graded rings is said to \textit{respect the grading} if $f(R_k) \subseteq S_k$.\footnote{The terminology ``$\Z$--filtering'' might be more appropriate, but this is the language commonly used.}
