--- a/sigma.tex
+++ b/sigma.tex
@@ -1518,8 +1518,9 @@ However, the spectra $HE_\Lambda P$ do not qualify as ``chromatically amenable''
 
 The cubical structure on a singular (generalized) elliptic curve is not unique, but (published) AHS has an argument showing that the unicity of the choice on the nonsingular ``bulk'' extends to a unique choice on the ``boundary'' of the compactified moduli too.
 
-
 There's also the work of Ando--French--Ganter on factorized / iterated $\Theta$ structures and how they give rise to the ``two--variable Jacobi genus''.
+
+FPFP Example 12.10 claims applications to $BU[2k, \infty)$, but I can't tell what they are.
 
 
 
