--- a/unknowns.tex
+++ b/unknowns.tex
@@ -688,6 +688,11 @@ free $E_\infty$--orientations off of $MU$
 
 
 
+At the top fo page 10 Neil talks in FPFP very briefly about Greenlees--May and local homology.
+
+
+
+
 
 
 Comparison of comodules $M$ for the isogenies pile with the action of $M_n(\Z_p)$ on $M \otimes_{E_n^*} D_\infty$ (this is a modern result due to Tomer, Tobi, Lukas, and Nat).  This is basically Nat's rational claim: start with a sheaf on the isogenies pile.  Tensor everything with $\Q$.  That turns this thing into a rational algebra under the Drinfel'd ring together with an equivariant action of $\GL_n \Q_p$.
