dorky epigraph idea

--- a/main.tex
+++ b/main.tex
@@ -57,6 +57,7 @@
 \todo[inline]{Use booktabs (http://www.ctan.org/tex-archive/macros/latex/contrib/booktabs/) to typeset any tables appearing in this book.  (I don't think there are very many.)}
 \todo[inline]{In several places you abuse the \texttt{align*} environment to put references into a right-hand column.  Is there a less hack-y way to do this?}
 \todo[inline]{Be consistent about hyphens / en-dashes connecting ``$A$/$E$/$H_\infty$'' to ``ring''.}
+\todo[inline]{Consider adding chapter epigraphs? Maybe from The Ninth Gate?}
 
 
 
