--- a/preface.tex
+++ b/preface.tex
@@ -26,7 +26,7 @@ The Informal Groups seminar: Sean Tilson, Matt Pancia, Dave Carchedi, Achim Krau
 
 Hood Chatham and Geoffrey Lee, Catherine Ray, Kevin Wray---Berkeley students who I talked to a lot
 
-Various unpublished sources: COCTALOS, the Crystals notes, Charles's 512 notes, Charles's \textit{Notes on the Hopkins--Miller theorem}, Jacob's lecture notes, Haynes's notes on cobordism, Neil's \textit{Functorial Philosophy}, \ldots
+Various unpublished sources: COCTALOS, the Crystals notes, Charles's 512 notes, Charles's \textit{Notes on the Hopkins--Miller theorem}, Jacob's lecture notes, Haynes's notes on cobordism, Neil's \textit{Functorial Philosophy}, the AHS Theorem of the Cube preprint, Neil's \textit{Formal Schemes for $K$--theory spaces}, the AHS \textit{Elliptic cohomology of $BO\<8\>$ in positive characteristic} (thank you, Gerd!!), \ldots
 
 
 
