reduce the power operations chapter to an appendix

--- a/sigma.tex
+++ b/sigma.tex
@@ -1522,7 +1522,7 @@ There's also the work of Ando--French--Ganter on factorized / iterated $\Theta$ 
 
 FPFP Example 12.10 claims applications to $BU[2k, \infty)$, but I can't tell what they are.
 
-
+Mention all this work of Gerd.  He has a bunch of papers that are all clustered around these topics.
 
 
 
