--- a/preamble.tex
+++ b/preamble.tex
@@ -190,6 +190,7 @@
 \newcommand{\Res}{\mathrm{Res}}
 \newcommand{\Tr}{\mathrm{Tr}}
 \newcommand{\Cart}{\mathrm{Cart}}
+\newcommand{\EinftyRings}{E_\infty\CatOf{RingSpectra}}
 
 \DeclareMathOperator{\im}{im}
 \DeclareMathOperator{\Ind}{Ind}
