some appendix remarks

--- a/unknowns.tex
+++ b/unknowns.tex
@@ -230,6 +230,13 @@ Prop 8.3 in ``Character of the Total Power Operation'' provides an algebro-geome
 
 
 
+
+\begin{theorem}[{\cite[Theorem 1.1]{StricklandEthyOfBSigma}}]
+The stable transfer maps $B\Sigma_{k + \ell} \to B\Sigma_k \times B\Sigma_\ell$, the diagonal maps $B\Sigma_k \to B\Sigma_k \times B\Sigma_k$, and the partition maps $B\Sigma_k \times B\Sigma_\ell \to B\Sigma_{k + \ell}$ give rise to a Hopf ring structure on $E^0 DS^0$ written $\times$, $\bullet$, and $\psi$.  The $\times$--indecomposables are $Q^\times E^0 DS^0 = \prod_{k \ge 0} (E^0 B\Sigma_{p^k} / I_{tr})$, and each such factor is isomorphic to $\sheaf O_{\Sub_{p^k} \G}$. \qed
+\end{theorem}
+
+
+
 ------Here's a bunch of junk to sort through------
 
 On the Lubin--Tate formal group, a necessary condition for a divisor to be a subgroup divisor is that it contains the identity point \emph{once}.  On any finite height formal group, a subgroup divisor is contained in the $p^k$--torsion for some $k \gg 0$, and so its defining polynomial equation divides the $p^k$--series associated to the formal group.  Since $[p^k]_{LT}(x) = px + \cdots$ is only once-divisible by $x$, $x = 0$ cannot be a repeated root.  (This is \emph{not} true for the formal group over the special fiber, where $x = 0$ can certainly be a repeated root.)
@@ -1062,6 +1069,8 @@ The presence of such interesting arithmetic invariants (Bernoulli numbers, Berno
 Some more open questions about this can be found in 
 \todo[inline]{Mike has some open questions about the end of this analysis (and in particular about the fiber of the Atkin map that appears in the $K(1)$--local analysis of $\tmf$, an analogue of the chromatic splitting fiber) at the end of his talk notes \textit{The $\String$ orientation of $\tmf$}.  Some of that should be copied here.}
 \end{remark}
+
+\todo{$KU$ is known to have a unique $E_\infty$ structure by work of Baker--Richter.  Is this also true of $K^{\Tate}$?  If so, it lends a lot of credibility to this Miller invariant calculation and its relation to $\tmf$.}
 
 
 
